--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -351,6 +351,11 @@ config PXE_UTILS
 	help
 	  Utilities for parsing PXE file formats.
 
+config SPL_PXE_UTILS
+	bool
+	help
+	  Utilities for parsing PXE file formats (SPL)
+
 config BOOTSTD
 	bool "Standard boot support"
 	default y
@@ -371,6 +376,9 @@ config BOOTSTD
 	    - bootmeth - a method to scan a bootdev to find bootflows (owned by
 	        U-Boot)
 	    - bootflow - a description of how to boot (owned by the distro)
+
+config SPL_BOOTSTD
+	bool # Standard boot support in SPL
 
 config BOOTSTD_FULL
 	bool "Enhanced features for standard boot"
@@ -438,6 +446,9 @@ config BOOTMETH_DISTRO
 
 	  This provides a way to try out standard boot on an existing boot flow.
 
+config SPL_BOOTMETH_DISTRO
+	def_bool n # Bootdev support for distro boot (SPL)
+
 config BOOTMETH_DISTRO_PXE
 	bool "Bootdev support for distro boot over network"
 	depends on CMD_PXE && CMD_NET && DM_ETH
@@ -447,6 +458,9 @@ config BOOTMETH_DISTRO_PXE
 	  bootdevs look for a 'extlinux/extlinux.conf' on the tftp server.
 
 	  This provides a way to try out standard boot on an existing boot flow.
+
+config SPL_BOOTMETH_DISTRO_PXE
+	def_bool n # Bootdev support for distro boot over network (SPL)
 
 config BOOTMETH_EFILOADER
 	bool "Bootdev support for EFI boot"
@@ -468,6 +482,9 @@ config BOOTMETH_EFILOADER
 	     riscv64   - RISC-V 64-bit
 
 	  This provides a way to try out standard boot on an existing boot flow.
+
+config SPL_BOOTMETH_EFILOADER
+	def_bool n # Bootdev support for EFI boot (SPL)
 
 config BOOTMETH_VBE
 	bool "Bootdev support for Verified Boot for Embedded"
@@ -499,6 +516,18 @@ config VPL_BOOTMETH_VBE
 
 if BOOTMETH_VBE
 
+config BOOTMETH_VBE_REQUEST
+	bool "Process OS requests in VBE"
+	depends on VPL && FIT
+	default y
+	help
+	  Enables support for processing requests from the Operating System
+	  in VBE. These include things like random numbers and address-space
+	  randomisation.
+
+config SPL_BOOTMETH_VBE_REQUEST
+	def_bool n # Process OS requests in VBE (SPL)
+
 config BOOTMETH_VBE_SIMPLE
 	bool "Bootdev support for VBE 'simple' method"
 	default y
@@ -515,6 +544,9 @@ config BOOTMETH_VBE_SIMPLE_OS
 	  fixing up the device tree with the required VBE information, ready
 	  for booting into the OS. This option is only enabled for U-Boot
 	  proper, since it is the phase where device tree fixups happen.
+
+config SPL_BOOTMETH_VBE_SIMPLE_OS
+	def_bool n # Bootdev support for VBE 'simple' method OS phase (SPL)
 
 config SPL_BOOTMETH_VBE_SIMPLE
 	bool "Bootdev support for VBE 'simple' method (SPL)"
@@ -576,6 +608,10 @@ config BOOTMETH_SANDBOX
 	  This is a sandbox bootmeth driver used for testing. It always returns
 	  -ENOTSUPP when attempting to boot.
 
+config SPL_BOOTMETH_SANDBOX
+	def_bool n
+	depends on SANDBOX
+
 config BOOTMETH_SCRIPT
 	bool "Bootdev support for U-Boot scripts"
 	default y if BOOTSTD_FULL
@@ -586,6 +622,9 @@ config BOOTMETH_SCRIPT
 
 	  This provides a way to try out standard boot on an existing boot flow.
 	  It is not enabled by default to save space.
+
+config SPL_BOOTMETH_SCRIPT
+	def_bool n # Bootdev support for U-Boot scripts (SPL)
 
 endif
 
