--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -287,6 +287,9 @@ config GENERATE_ACPI_TABLE
 	  by the operating system. It defines platform-independent interfaces
 	  for configuration and power management monitoring.
 
+config SPL_GENERATE_ACPI_TABLE
+	def_bool n  # Generate an ACPI table (SPL)
+
 config SPL_TINY_MEMSET
 	bool "Use a very small memset() in SPL"
 	depends on SPL
