--- a/test/Kconfig
+++ b/test/Kconfig
@@ -16,6 +16,7 @@ config SPL_UNIT_TEST
 	depends on SPL
 	# We need to be able to unbind devices for tests to work
 	select SPL_DM_DEVICE_REMOVE
+	select SPL_CRC8
 	help
 	  Select this to enable unit tests in SPL. Most test are designed for
 	  running in U-Boot proper, but some are intended for SPL, such as
