--- a/arch/sandbox/Kconfig
+++ b/arch/sandbox/Kconfig
@@ -25,21 +25,21 @@ config SANDBOX_RAM_SIZE_MB
 	  The minimum value is 64 MiB. The maximum value is 4095 MiB for the
 	  32bit sandbox.
 
-config SANDBOX_SPL
+config SPL_SANDBOX
 	bool "Enable SPL for sandbox"
 	select SUPPORT_SPL
 
-config SANDBOX_TPL
+config TPL_SANDBOX
 	bool "Enable TPL for sandbox"
 	select SUPPORT_TPL
 
-config SANDBOX_VPL
+config VPL_SANDBOX
 	bool "Enable VPL for sandbox"
 	select SUPPORT_VPL
 
 config SYS_CONFIG_NAME
-	default "sandbox_spl" if SANDBOX_SPL
-	default "sandbox" if !SANDBOX_SPL
+	default "sandbox_spl" if SPL_SANDBOX
+	default "sandbox" if !SPL_SANDBOX
 
 config HOST_32BIT
 	def_bool ! $(cc-define,_LP64)
