--- a/arch/sandbox/dts/test.dts
+++ b/arch/sandbox/dts/test.dts
@@ -1761,6 +1761,6 @@
 #include "sandbox_pmic.dtsi"
 #include "cros-ec-keyboard.dtsi"
 
-#ifdef CONFIG_SANDBOX_VPL
+#if CONFIG(SUPPORT_VPL)
 #include "sandbox_vpl.dtsi"
 #endif
