--- a/arch/arm/mach-zynq/Makefile
+++ b/arch/arm/mach-zynq/Makefile
@@ -12,4 +12,5 @@ obj-y	+= slcr.o
 obj-y	+= clk.o
 obj-y	+= lowlevel_init.o
 AFLAGS_lowlevel_init.o := -mfpu=neon
+$(warning CONFIG_SPL_BUILD $(CONFIG_SPL_BUILD))
 obj-$(CONFIG_SPL_BUILD)	+= spl.o ps7_spl_init.o
