--- a/configs/sandbox_vpl_defconfig
+++ b/configs/sandbox_vpl_defconfig
@@ -16,9 +16,9 @@ CONFIG_SPL_SYS_MALLOC_F_LEN=0x8000
 CONFIG_SPL=y
 CONFIG_BOOTSTAGE_STASH_ADDR=0x0
 CONFIG_SYS_LOAD_ADDR=0x0
-CONFIG_SANDBOX_SPL=y
-CONFIG_SANDBOX_TPL=y
-CONFIG_SANDBOX_VPL=y
+CONFIG_SPL_SANDBOX=y
+CONFIG_TPL_SANDBOX=y
+CONFIG_VPL_SANDBOX=y
 CONFIG_DEBUG_UART=y
 CONFIG_SYS_MEMTEST_START=0x00100000
 CONFIG_SYS_MEMTEST_END=0x00101000
@@ -215,7 +215,6 @@ CONFIG_DM_RESET=y
 CONFIG_SANDBOX_RESET=y
 CONFIG_DM_RTC=y
 CONFIG_SPL_DM_RTC=y
-CONFIG_TPL_DM_RTC=y
 CONFIG_SCSI=y
 CONFIG_DM_SCSI=y
 CONFIG_SANDBOX_SERIAL=y
