bootstd: Add some default filesystems and commands
We need to support a basic set of filesystems for booting to work in most
cases. Add these in, letting the board disable them (for space reasons) if
desired.

This does enable the commands as well as the functionality, even though
bootstd is quite happen to use ext4 without the ext4 command. Further work
would be needed to disintangle this and reduce code size.

Signed-off-by: Simon Glass <sjg@chromium.org>

--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -354,6 +354,15 @@ config BOOTSTD
 	bool "Standard boot support"
 	default y
 	depends on DM && OF_CONTROL && BLK
+	imply USE_BOOTCOMMAND
+	# bootstd does not require the commands, but this is how the filesystems
+	# are enabled
+	imply CMD_EXT2
+	imply CMD_EXT4
+	imply CMD_FAT
+	imply CMD_FS_GENERIC
+	imply CMD_PXE if NET
+	imply USB_STORAGE
 	help
 	  U-Boot supports a standard way of locating something to boot,
 	  typically an Operating System such as Linux, provided by a distro such
