--- a/configs/qemu_arm64_defconfig
+++ b/configs/qemu_arm64_defconfig
@@ -70,3 +70,6 @@ CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_PCI=y
 CONFIG_TPM=y
 CONFIG_BOOTSTD_FULL=y
+CONFIG_LOG=y
+CONFIG_LOGF_FUNC=y
+CONFIG_CMD_BOOTZ=y
