--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -362,7 +362,10 @@ config BOOTSTD
 	imply CMD_FAT
 	imply CMD_FS_GENERIC
 	imply CMD_PXE if NET
+	imply CMD_DHCP if NET
 	imply USB_STORAGE
+	imply SUPPORT_RAW_INITRD
+	imply ENV_VARS_UBOOT_CONFIG
 	help
 	  U-Boot supports a standard way of locating something to boot,
 	  typically an Operating System such as Linux, provided by a distro such
